--- a/Assignment1_CarineUmugabekazi.ipynb
+++ b/Assignment1_CarineUmugabekazi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMg08Sf4xcZ1wHFnTrjE8QL",
+      "authorship_tag": "ABX9TyP0DlOsZsJRpdV6v82bZCZP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,13 +31,21 @@
       "source": [
         "**School Drop Out prediction**\n",
         "\n",
+        "Student Name: Carine Umugabekazi\n",
+        "Course: Software Engineering / Machine Learning\n",
+        "\n",
         "1. INTRODUCTION\n",
         "I this notebook, we predict whether a student will drop out, enroll, or graduate using a dataset of tudent records. We will use:\n",
         "  1. logistic regression\n",
         "  2.Decision Tree classifier\n",
         "  3.Custom Neural Network(Three-lyer NN)\n",
         "\n",
-        "  We will preprocess the data, handle missing values, split it into training/testing, train models, and evaluate them.\n",
+        "  We will preprocess the data, handle missing values, split it into training/\n",
+        "\n",
+        "1.   List item\n",
+        "2.   List item\n",
+        "\n",
+        "testing, train models, and evaluate them.\n",
         "\n",
         "  Dataset citation: Realinho, Valentim, Mónica Vieira Martins, Jorge Machado, and Luís Baptista. 2021. Predict Students' Dropout and Academic Success. UCI Machine Learning Repository. https://doi.org/10.24432/C5MC89."
       ],
@@ -2257,6 +2265,7 @@
         "\n",
         "\n",
         "1. Logistic Regression:\n",
+        "Due to imbalance in the data, model was unable to recognise all classses fairly.\n",
         "\n",
         "Shows an accuracy of ~0.766 on the test set.\n",
         "\n",
@@ -2276,7 +2285,6 @@
         "\n",
         "Experiment 2 (hidden_size=64, lr=0.005): Final training accuracy ~0.998, validation accuracy similar.\n",
         "\n",
-        "Confusion matrix, precision, recall, and F1 were not printed in your code, so only accuracy from training is reported.\n",
         "\n",
         "Summary:\n",
         "\n",
@@ -2284,7 +2292,7 @@
         "\n",
         "Neural network experiments show higher training/validation accuracy, but detailed metrics weren’t computed.\n",
         "\n",
-        "Results highlight differences in model capability based on the outputs you recorded, without additional assumptions.\n"
+        ".\n"
       ],
       "metadata": {
         "id": "tfp62ngzG0N7"
